<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_fragment_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="32dp">

    <ImageButton
        android:id="@+id/btn_close_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_circle_left"
        android:backgroundTint="#00000000"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/back_label"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_title"
        android:fontFamily="@font/rubik_medium"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/card_large"
        android:layout_marginBottom="56dp"
        />


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:fontFamily="@font/quicksand_medium"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/grey"
            />

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_weight="1"
            tools:text="John doe"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:fontFamily="@font/quicksand_medium"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/grey"
            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_weight="1"
            tools:text="doe@mail.com"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/id_label"
            android:fontFamily="@font/quicksand_medium"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/grey"
            />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_weight="1"
            tools:text="210"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/bank_label"
            android:fontFamily="@font/quicksand_medium"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/grey"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/card_bank_name"
            />

    </LinearLayout>

</LinearLayout>
